@@ -11,9 +11,9 @@ content-type: reference
 discoiquuid: 1876d8d6-bffa-4a1c-99c0-f6001acea825
 docset: aem65
 translation-type: tm+mt
-source-git-commit: 38ef8fc8d80009c8ca79aca9e45cf10bd70e1f1e
+source-git-commit: f696b1081f14ba379cde51a3542a5b1b5f9668e2
 workflow-type: tm+mt
-source-wordcount: '523'
+source-wordcount: '473'
 ht-degree: 0%
 
 ---
@@ -23,37 +23,27 @@ ht-degree: 0%
 
 本节介绍更新AEM以安装Application Server所需遵循的过程。
 
-此过程中的所有示例都将JBoss用作应用程序服务器，并暗示您已部署了可工作版本的AEM。 该过程用于文档从&#x200B;**AEM 5.6版到6.3**&#x200B;执行的升级。
+此过程中的所有示例都将Tomcat用作应用程序服务器，暗示您已部署了一个可工作版本的AEM。 该过程用于文档从&#x200B;**AEM 6.4版到6.5**&#x200B;执行的升级。
 
-1. 首先，开始JBoss。 在大多数情况下，可以通过从终端运行以下命令来运行`standalone.sh`启动脚本：
-
-   ```shell
-   jboss-install-folder/bin/standalone.sh
-   ```
-
-1. 如果AEM 5.6已部署，请运行以下项来检查捆绑包是否正常运行：
+1. 首先，开始TomCat。 在大多数情况下，可以通过从终端运行以下命令来运行`./catalina.sh`开始启动脚本来执行此操作：
 
    ```shell
-   wget https://<serveraddress:port>/cq/system/console/bundles
+   $CATALINA_HOME/bin/catalina.sh start
    ```
 
-1. 接下来，取消部署AEM 5.6:
+1. 如果AEM 6.4已部署，请通过访问以下链接检查捆绑包是否正常运行：
 
    ```shell
-   rm jboss-install-folder/standalone/deployments/cq.war
+   https://<serveraddress:port>/cq/system/console/bundles
    ```
 
-1. 停止JBoss。
+1. 接下来，取消部署AEM 6.4。这可以从TomCat App Manager(`http://serveraddress:serverport/manager/html`)完成
 
-1. 现在，使用crx2oak迁移工具迁移存储库：
+1. 现在，使用crx2oak迁移工具迁移存储库。 为此，请从[此位置](https://repo.adobe.com/nexus/content/groups/public/com/adobe/granite/crx2oak)下载最新版crx2oak。
 
    ```shell
-   java -jar crx2oak.jar crx-quickstart/repository/ crx-quickstart/oak-repository
+   SLING_HOME= $AEM-HOME/crx-quickstart java -Xmx4096m -XX:MaxPermSize=2048M -jar crx2oak.jar --load-profile segment-fds
    ```
-
-   >[!NOTE]
-   >
-   >在此示例中，oak-repository是新转换的存储库将驻留的临时目录。 在执行此步骤之前，请确保您拥有最新的crx2oak.jar版本。
 
 1. 通过执行以下操作，删除sling.properties文件中的必要属性：
 
@@ -84,59 +74,41 @@ ht-degree: 0%
 
    * **BootstrapCommandFile_timestamp.txt文件**:`rm -f crx-quickstart/launchpad/felix/bundle0/BootstrapCommandFile_timestamp.txt`
 
-1. 将新迁移的区段存储复制到其正确位置：
+   * 通过运行以下命令删除&#x200B;**sling.options.file**:`find crx-quickstart/launchpad -type f -name "sling.options.file" -exec rm -rf`
 
-   ```shell
-   mv crx-quickstart/oak-repository/segmentstore crx-quickstart/repository/segmentstore
-   ```
-
-1. 还复制数据存储：
-
-   ```shell
-   mv crx-quickstart/repository/repository/datastore crx-quickstart/repository/datastore
-   ```
-
-1. 接下来，您需要创建包含将与新升级实例一起使用的OSGi配置的文件夹。 更具体地说，需要在&#x200B;**crx-quickstart**&#x200B;下创建名为install的文件夹。
-
-1. 现在，创建将与AEM 6.3一起使用的节点存储和数据存储。可以通过创建以下名称的文件来实现此目的：在&#x200B;**crx-quickstart\install**&#x200B;下：
+1. 现在，创建将与AEM 6.5一起使用的节点存储和数据存储。您可以通过在`crx-quickstart\install`下创建具有以下名称的两个文件来实现这一点：
 
    * `org.apache.jackrabbit.oak.segment.SegmentNodeStoreService.cfg`
-
    * `org.apache.jackrabbit.oak.plugins.blob.datastore.FileDataStore.cfg`
 
    这两个文件将配置AEM以使用TarMK节点存储和文件数据存储。
 
 1. 编辑配置文件，使其准备就绪。 更具体地说：
 
-   * 将以下代码行添加到&#x200B;**org.apache.jackrabbit.oak.segment.SegmentNodeStoreService.config**:\
-      `customBlobStore=true`
+   * 将以下行添加到`org.apache.jackrabbit.oak.segment.SegmentNodeStoreService.config`:
 
-   * 然后，将以下行添加到&#x200B;**org.apache.jackrabbit.oak.plugins.blob.datastore.FileDataStore.config**:
+      ```customBlobStore=true```
+
+   * 然后，将以下行添加到`org.apache.jackrabbit.oak.plugins.blob.datastore.FileDataStore.config`:
 
       ```
       path=./crx-quickstart/repository/datastore
-       minRecordLength=4096
+      minRecordLength=4096
       ```
 
-1. 通过运行以删除crx2运行模式：
+1. 您现在需要更改AEM 6.5 war文件中的运行模式。 为此，首先创建一个临时文件夹，用于容纳AEM 6.5战争。 此示例中文件夹的名称将为`temp`。 复制完war文件后，从temp文件夹内运行以提取其内容：
 
-   ```shell
-   find crx-quickstart/launchpad -type f -name "sling.options.file" -exec rm -rf {} \
+   ```
+   jar xvf aem-quickstart-6.5.0.war
    ```
 
-1. 您现在需要更改AEM 6.3 war文件中的运行模式。 为此，首先创建一个临时文件夹，用于容纳AEM 6.3战争。 此示例中文件夹的名称将为&#x200B;**temp**。 复制完war文件后，从temp文件夹内运行以提取其内容：
+1. 提取内容后，转到&#x200B;**WEB-INF**&#x200B;文件夹并编辑web.xml文件以更改运行模式。 要查找在XML中设置它们的位置，请查找`sling.run.modes`字符串。 找到它后，请更改下一行代码中的运行模式，默认情况下，该模式设置为作者：
 
-   ```shell
-   jar xvf aem-quickstart-6.3.0.war
-   ```
-
-1. 提取内容后，转到&#x200B;**WEB-INF**&#x200B;文件夹并编辑`web.xml`文件以更改运行模式。 要查找在XML中设置它们的位置，请查找`sling.run.modes`字符串。 找到它后，请更改下一行代码中的运行模式，默认情况下，该模式设置为作者：
-
-   ```shell
+   ```bash
    <param-value >author</param-value>
    ```
 
-1. 更改上述作者值，并将运行模式设置为：author,crx3,crx3tar最后的代码块应当如下：
+1. 更改上述作者值，并将运行模式设置为：`author,crx3,crx3tar`。 最后的代码块应当如下：
 
    ```
    <init-param>
@@ -149,13 +121,8 @@ ht-degree: 0%
 
 1. 使用修改后的内容重新创建jar:
 
-   ```shell
-   jar cvf aem62.war
+   ```bash
+   jar cvf aem65.war
    ```
 
-1. 最后，部署新的war文件：
-
-   ```shell
-   cp temp/aem62.war jboss-install-folder/standalone/deployments/aem61.war
-   ```
-
+1. 最后，在TomCat中部署新的战争文件。
